plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'pmd'
    id 'com.github.spotbugs' version '6.1.7'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'jacoco'
}

group = 'io.localwebservices'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'io.localwebservices.lws.LwsServer'
}

repositories {
    mavenCentral()
}

def awsSdkVersion = '2.26.0'
def cucumberVersion = '7.15.0'
def jacksonVersion = '2.17.0'

sourceSets {
    test {
        resources {
            srcDir '../../specification/core'
        }
    }
    architectureTest {
        java { srcDir 'src/architectureTest/java' }
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
    unitTest {
        java { srcDir 'src/unitTest/java' }
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    architectureTestImplementation.extendsFrom testImplementation
    architectureTestRuntimeOnly.extendsFrom testRuntimeOnly
    unitTestImplementation.extendsFrom testImplementation
    unitTestRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencies {
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"

    testImplementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
    testImplementation 'software.amazon.awssdk:dynamodb'
    testImplementation 'software.amazon.awssdk:sqs'
    testImplementation 'software.amazon.awssdk:s3'
    testImplementation 'software.amazon.awssdk:sns'
    testImplementation 'software.amazon.awssdk:eventbridge'
    testImplementation 'software.amazon.awssdk:sfn'
    testImplementation 'software.amazon.awssdk:ssm'
    testImplementation 'software.amazon.awssdk:secretsmanager'
    testImplementation 'software.amazon.awssdk:organizations'
    testImplementation 'software.amazon.awssdk:url-connection-client'

    testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-picocontainer:${cucumberVersion}"
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'

    architectureTestImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    architectureTestImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
    architectureTestImplementation files('../arch_tests/build/libs/arch_tests.jar')

    unitTestImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    unitTestRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
}

checkstyle {
    toolVersion = '10.17.0'
    configFile = file('../config/checkstyle/checkstyle.xml')
}

pmd {
    toolVersion = '7.13.0'
    consoleOutput = true
    ruleSets = []
    ruleSetConfig = resources.text.fromFile('../config/pmd/pmd-ruleset.xml')
}

spotbugs {
    toolVersion = '4.9.3'
    ignoreFailures = false
    excludeFilter = file('../config/spotbugs/exclude.xml')
}

spotless {
    java {
        googleJavaFormat('1.22.0')
        target 'src/**/*.java'
    }
}

test {
    useJUnitPlatform()
    systemProperty 'cucumber.junit-platform.naming-strategy', 'long'
    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = false
    }
}

task architectureTest(type: Test) {
    testClassesDirs = sourceSets.architectureTest.output.classesDirs
    classpath = sourceSets.architectureTest.runtimeClasspath
    useJUnitPlatform()
    systemProperty 'arch.src.root', "${projectDir}/src/main/java"
    systemProperty 'arch.tests.root', "${projectDir}/src/test/java"
}

task unitTest(type: Test) {
    testClassesDirs = sourceSets.unitTest.output.classesDirs
    classpath = sourceSets.unitTest.runtimeClasspath
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

task jacocoUnitTestReport(type: JacocoReport) {
    executionData unitTest
    sourceSets sourceSets.main
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, include: ['**/*Store.class', '**/ServerState.class'])
    }))
}

task jacocoUnitTestCoverageVerification(type: JacocoCoverageVerification) {
    executionData unitTest
    sourceSets sourceSets.main
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, include: ['**/*Store.class', '**/ServerState.class'])
    }))
    violationRules {
        rule {
            limit { counter = 'LINE'; value = 'COVEREDRATIO'; minimum = 0.95 }
            limit { counter = 'BRANCH'; value = 'COVEREDRATIO'; minimum = 0.95 }
        }
    }
}

unitTest.finalizedBy jacocoUnitTestReport
unitTest.finalizedBy jacocoUnitTestCoverageVerification
